--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/graphQL/node_modules
 /backend/node_modules
 /node_modules
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
